--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <script src="app.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
